Fix footer alignment

--- a/index.css
+++ b/index.css
@@ -31,6 +31,7 @@ footer{
     margin: auto;
     flex: 0 30px;
     width:90%;
+    text-align:center;
 }
 main{
     flex: 100%;
